--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -2,9 +2,9 @@
 <footer class="footer mt-4">
     <div class="space-1">
         <div class="container">
-            <div class="d-lg-flex d-md-block justify-content-between align-items-center">
+            <div class="d-lg-flex d-md-block justify-content-center align-items-center">
                 <!-- Copyright -->
-                <p class="mb-3 mb-lg-0 text-gray-1">© 2020 SPM Booking System. All rights reserved</p>
+                <p>© 2020 SPM Booking System. All rights reserved</p>
                 <!-- End Copyright -->
             </div>
         </div>
