--- a/views/_layouts/navigation/user-navigation.ejs
+++ b/views/_layouts/navigation/user-navigation.ejs
@@ -20,7 +20,7 @@
         <ul class="navbar-nav u-header__navbar-nav">
             <!-- Home -->
             <li class="nav-item hs-has-sub-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut">
-                <a id="homeMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="index.html" aria-haspopup="true" aria-expanded="false" aria-labelledby="homeSubMenu">Home</a>
+                <a id="homeMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/" aria-haspopup="true" aria-expanded="false" aria-labelledby="homeSubMenu">Home</a>
             </li>
             <!-- End Home -->
 
@@ -32,13 +32,13 @@
 
             <!-- Tour -->
             <li class="nav-item hs-has-mega-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-max-width="722px" data-position="right">
-                <a id="tourMegaMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle" href="about-us.html" aria-haspopup="true" aria-expanded="false">About us</a>
+                <a id="tourMegaMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle" href="/about-us" aria-haspopup="true" aria-expanded="false">About us</a>
             </li>
             <!-- End Tour -->
 
             <!-- Rental -->
             <li class="nav-item hs-has-sub-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut">
-                <a id="rentalMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="javascript:;" aria-haspopup="true" aria-expanded="false" aria-labelledby="rentalSubMenu">Login or Register</a>
+                <a id="rentalMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/login" aria-haspopup="true" aria-expanded="false" aria-labelledby="rentalSubMenu">Login or Register</a>
             </li>
             <!-- End Rental -->
         </ul>
