--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,6 +74,12 @@
                                    data-target="#forgotPassword" data-link-group="idForm" data-animation-in="fadeIn"><u>Forgot
                                         Password?</u></a>
                             </div>
+                            <div class="card-footer p-0">
+                                <div class="card-footer__bottom p-4 text-center font-size-14">
+                                    <span class="text-gray-1">Don't have an account? </span>
+                                    <a id="rentalMenu" href="/signup">Register</a> here
+                                </div>
+                            </div>
                         </div>
                     </div>
                     </form>
