--- a/views/template.ejs
+++ b/views/template.ejs
@@ -9,7 +9,7 @@
 <main id="content">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-xl-9">
+            <div class="container max-width-810 mx-auto">
 
             </div>
         </div>
