Design updates Admin, Owner and User Dashboards
Design updates Admin, Owner and User Dashboards

--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -45,9 +45,9 @@
                                         <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
                                             <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Last Name" aria-label="Last Name" aria-describedby="normalname" required data-msg="Please enter a valid name." data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-append">
-                                                 <span class="input-group-text" id="normalname">
-                                                     <span class="flaticon-browser-1 font-size-20"></span>
-                                                  </span>
+                                                <span class="input-group-text" id="username">
+                                                      <span class="flaticon-user font-size-20"></span>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
@@ -75,7 +75,7 @@
                                     <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
                                         <label class="sr-only" for="phone">Phone Number</label>
                                         <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
-                                            <input type="email" class="form-control" name="phone" id="phone" placeholder="Phone Number" aria-label="phone" aria-describedby="phone" required data-msg="Please enter a valid phone number." data-error-class="u-has-error" data-success-class="u-has-success">
+                                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone Number" aria-label="phone" aria-describedby="phone" required data-msg="Please enter a valid phone number." data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-append">
                                                 <span class="input-group-text" id="phone">
                                                     <span class="flaticon-phone-call font-size-20"></span>
@@ -117,20 +117,18 @@
                                 </div>
                                 <!-- Form Group -->
                                 <div class="d-flex justify-content-between mb-1">
-                                    <div class="custom-control custom-switch ml-5 p-2">
+                                    <div class="custom-control custom-switch mb-4">
                                         <input type="checkbox" value="On" class="custom-control-input" id="HaveProperty" name="HaveProperty">
                                         <label class="custom-control-label" for="HaveProperty">Do you have a property to rent?</label>
                                     </div>
                                 </div>
                                 <!-- End Form Group -->                                <!-- End Form Group -->
-                                <div class="d-flex justify-content-between mb-1">
+                                <div class="d-flex justify-content-between mb-4">
                                     <div class="custom-control custom-checkbox custom-control-inline">
                                         <input type="checkbox" id="customCheckboxInline2" name="customCheckboxInline2" class="custom-control-input">
                                         <label class="custom-control-label" for="customCheckboxInline2">I have read and accept the <a href="#">Terms and Privacy Policy</a></label>
                                     </div>
                                 </div>
-
-
                                 <div class="mb-3 pb-1">
                                     <button type="submit" class="btn btn-md btn-block btn-blue-1 rounded-xs font-weight-bold transition-3d-hover">Register</button>
                                 </div>
