--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -39,7 +39,7 @@
                                     Let us know who you are
                                 </h5>
                                 <!-- Contacts Form -->
-                                <form class="js-validate">
+                                <form class="js-validate" action="/payment">
                                     <div class="row">
                                         <!-- Input -->
                                         <div class="col-sm-6 mb-4">
@@ -47,7 +47,6 @@
                                                 <label class="form-label">
                                                     First Name
                                                 </label>
-
                                                 <input type="text" class="form-control" name="firstName" placeholder="Ali" aria-label="Ali" required
                                                 data-msg="Please enter your first name."
                                                 data-error-class="u-has-error"
