--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,10 +21,10 @@
                     <div class="mb-lg-n16">
                         <div class="card border-0 tab-shadow">
                             <div class="card-body">
-                                <form class="js-validate">
+                                <form class="js-validate" action="/property-list">
                                   <div class="row d-block nav-select d-lg-flex mb-lg-3 px-2 px-lg-3">
                                     <div class="col-sm-12 col-lg-3dot6 col-xl-3dot7 mb-4 mb-lg-0 ">
-                                        <span class="d-block text-gray-1 font-weight-normal text-left mb-0">Destination or Hotel Name</span>
+                                        <span class="d-block text-gray-1 font-weight-normal text-left mb-0">Destination</span>
                                         <!-- Select -->
                                         <select class="js-select selectpicker dropdown-select tab-dropdown col-12 pl-0 flaticon-pin-1 d-flex align-items-center text-primary font-weight-semi-bold" title="Where are you going?"
                                             data-style=""
@@ -123,11 +123,11 @@
                                                 <div class="js-quantity mx-3 row align-items-center justify-content-between">
                                                     <span class="d-block font-size-16 text-secondary font-weight-medium">Child</span>
                                                     <div class="d-flex">
-                                                        <a class="js-minus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="javascript:;">
+                                                        <a class="js-minus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="/property-list">
                                                             <small class="fas fa-minus btn-icon__inner"></small>
                                                         </a>
                                                         <input class="js-result form-control h-auto border-0 rounded p-0 max-width-6 text-center" type="text" value="1">
-                                                        <a class="js-plus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="javascript:;">
+                                                        <a class="js-plus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="/property-list">
                                                             <small class="fas fa-plus btn-icon__inner"></small>
                                                         </a>
                                                     </div>
