--- a/views/property-details.ejs
+++ b/views/property-details.ejs
@@ -618,13 +618,13 @@
                             <div class="border border-color-7 rounded mb-5">
                                 <div class="border-bottom">
                                     <div class="p-4">
-                                        <span class="font-size-14">From</span>
+                                        <span class="font-size-14">Price</span>
                                         <span class="font-size-24 text-gray-6 font-weight-bold ml-1">£350.00</span>
                                     </div>
                                 </div>
                                 <div class="p-4">
                                     <!-- Input -->
-                                    <span class="d-block text-gray-1  font-weight-normal mb-0 text-left">Destination or Hotel Name</span>
+                                    <span class="d-block text-gray-1  font-weight-normal mb-0 text-left">Destination</span>
                                     <div class="mb-4">
                                         <div class="input-group border-bottom border-width-2 border-color-1">
                                             <i class="flaticon-pin-1 d-flex align-items-center mr-2 text-primary font-weight-semi-bold font-size-22"></i>
@@ -634,7 +634,7 @@
                                     <!-- End Input -->
 
                                     <!-- Input -->
-                                    <span class="d-block text-gray-1 font-weight-normal mb-0 text-left">Check In - Out</span>
+                                    <span class="d-block text-gray-1 font-weight-normal mb-0 text-left">First Available Dates</span>
                                     <div class="mb-4">
                                         <div class="border-bottom border-width-2 border-color-1">
                                             <div id="datepickerWrapperPick" class="u-datepicker input-group">
@@ -706,11 +706,11 @@
                                                     <div class="js-quantity mx-3 row align-items-center justify-content-between">
                                                         <span class="d-block font-size-16 text-secondary font-weight-medium">Child</span>
                                                         <div class="d-flex">
-                                                            <a class="js-minus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="javascript:;">
+                                                            <a class="js-minus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="/reservation">
                                                                 <small class="fas fa-minus btn-icon__inner"></small>
                                                             </a>
                                                             <input class="js-result form-control h-auto border-0 rounded p-0 max-width-6 text-center" type="text" value="1">
-                                                            <a class="js-plus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="javascript:;">
+                                                            <a class="js-plus btn btn-icon btn-medium btn-outline-secondary rounded-circle" href="/reservation">
                                                                 <small class="fas fa-plus btn-icon__inner"></small>
                                                             </a>
                                                         </div>
@@ -725,35 +725,8 @@
                                     <!-- End Input -->
 
                                     <div class="text-center">
-                                        <a href="../rental/rental-booking.html" class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1 transition-3d-hover font-weight-bold">Book Now</a>
+                                        <a href="reservation" class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1 transition-3d-hover font-weight-bold">Book Now</a>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="border border-color-7 rounded p-4 mb-5">
-                                <h6 class="font-size-17 font-weight-bold text-gray-3 mx-1 mb-3 pb-1">Why Book With Us?</h6>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="flaticon-star font-size-25 text-primary mr-3 pr-1"></i>
-                                    <h6 class="mb-0 font-size-14 text-gray-1">
-                                        <a href="#">No-hassle best price guarantee</a>
-                                    </h6>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="flaticon-support font-size-25 text-primary mr-3 pr-1"></i>
-                                    <h6 class="mb-0 font-size-14 text-gray-1">
-                                        <a href="#">Customer care available 24/7</a>
-                                    </h6>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="flaticon-favorites-button font-size-25 text-primary mr-3 pr-1"></i>
-                                    <h6 class="mb-0 font-size-14 text-gray-1">
-                                        <a href="#">Hand-picked Tours &amp; Activities</a>
-                                    </h6>
-                                </div>
-                                <div class="d-flex align-items-center mb-0">
-                                    <i class="flaticon-airplane font-size-25 text-primary mr-3 pr-1"></i>
-                                    <h6 class="mb-0 font-size-14 text-gray-1">
-                                        <a href="#">Free Travel Insureance</a>
-                                    </h6>
                                 </div>
                             </div>
                         </div>
