--- a/views/_layouts/head.ejs
+++ b/views/_layouts/head.ejs
@@ -25,3 +25,4 @@
 
 <!-- CSS MyTravel Template -->
 <link rel="stylesheet" href="assets/css/theme.css">
+<link rel="stylesheet" href="assets/css/custom.css">
