--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -156,7 +156,7 @@
                                 <div class="tab-content">
                                     <div class="tab-pane fade pt-8 show active" id="pills-one-example2" role="tabpanel" aria-labelledby="pills-one-example2-tab">
                                         <!-- Payment Form -->
-                                        <form class="js-validate">
+                                        <form class="js-validate" action="/confirmation">
                                             <div class="row">
                                                 <!-- Input -->
                                                 <div class="col-sm-6 mb-4">
