--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="d-lg-flex d-md-block justify-content-center align-items-center">
                 <!-- Copyright -->
-                <p>© 2020 SPM Booking System. All rights reserved</p>
+                <p>© 2020 SPM & Booking System. All rights reserved</p>
                 <!-- End Copyright -->
             </div>
         </div>
