--- a/views/_layouts/head.ejs
+++ b/views/_layouts/head.ejs
@@ -26,3 +26,4 @@
 <!-- CSS MyTravel Template -->
 <link rel="stylesheet" href="assets/css/theme.css">
 <link rel="stylesheet" href="assets/css/custom.css">
+<link rel="stylesheet" href="assets/css/style.css">
