--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="container max-width-810 mx-auto">
-                <form method="POST" action="/signup">
+                <form class="js-validate" method="POST" action="/signup">
                 <!-- Signup -->
                 <div id="signup" data-target-group="idForm">
                     <!-- Header -->
@@ -24,10 +24,10 @@
                             <div class="tab-pane fade active show" id="pills-one-code-sample" role="tabpanel" aria-labelledby="pills-one-code-sample-tab">
                                 <!-- Form Group -->
                                 <div class="form-group pb-1">
-                                    <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                    <div class="js-form-message js-focus-stae">
                                         <label class="sr-only" for="firstname">First Name</label>
-                                        <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
-                                            <input type="text" class="form-control" name="firstname" id="firstname" placeholder="First Name" aria-label="First Name" aria-describedby="firstname" required data-msg="Please enter a valid user name." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                            <input type="text" class="form-control" name="firstname" id="firstname" placeholder="First Name" aria-label="First Name" aria-describedby="firstname" required data-msg="Please enter a valid first name." data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-append">
                                                 <span class="input-group-text" id="username">
                                                       <span class="flaticon-user font-size-20"></span>
@@ -40,10 +40,10 @@
 
                                 <!-- Form Group -->
                                 <div class="form-group pb-1">
-                                    <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                    <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                         <label class="sr-only" for="lastname">Last Name</label>
-                                        <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
-                                            <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Last Name" aria-label="Last Name" aria-describedby="normalname" required data-msg="Please enter a valid name." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                            <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Last Name" aria-label="Last Name" aria-describedby="normalname" required data-msg="Please enter a valid last name." data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-append">
                                                 <span class="input-group-text" id="username">
                                                       <span class="flaticon-user font-size-20"></span>
@@ -56,9 +56,9 @@
 
                                 <!-- Form Group -->
                                 <div class="form-group pb-1">
-                                    <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                    <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                         <label class="sr-only" for="email">Email</label>
-                                        <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
+                                        <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
                                             <input type="email" class="form-control" name="email" id="email" placeholder="Email" aria-label="Email" aria-describedby="signupEmail" required="" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-append">
                                                 <span class="input-group-text" id="signupEmail">
@@ -72,9 +72,9 @@
 
                                 <!-- Form Group -->
                                 <div class="form-group pb-1">
-                                    <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                    <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                         <label class="sr-only" for="phone">Phone Number</label>
-                                        <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
+                                        <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
                                             <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone Number" aria-label="phone" aria-describedby="phone" required data-msg="Please enter a valid phone number." data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-append">
                                                 <span class="input-group-text" id="phone">
@@ -88,10 +88,10 @@
 
                                 <!-- Form Group -->
                                 <div class="form-group pb-1">
-                                    <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                    <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                         <label class="sr-only" for="signupSrPassword">Password</label>
-                                        <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
-                                            <input type="password" class="form-control" name="password" id="signupSrPassword" placeholder="Password" aria-label="Password" aria-describedby="signupPassword" required data-msg="Your password is invalid. Please try again." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                            <input type="password" class="form-control" name="password" id="signupSrPassword" placeholder="Password" aria-label="Password" aria-describedby="signupPassword" required data-msg="Please enter a valid password" data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-prepend">
                                                   <span class="input-group-text" id="signupPassword">
                                                       <span class="flaticon-password font-size-20"></span>
@@ -103,10 +103,11 @@
                                 <!-- End Form Group -->
                                 <!-- Form Group -->
                                 <div class="form-group pb-1">
-                                    <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                    <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                         <label class="sr-only" for="confirmpassword">Confirm Password</label>
-                                        <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
-                                            <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" placeholder="Confirm Password" aria-label="confirmpassword" aria-describedby="confirmpassword" required data-msg="Your password is invalid. Please try again." data-error-class="u-has-error" data-success-class="u-has-success">
+                                        <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+
+                                            <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" placeholder="Confirm Password" aria-label="confirmpassword" aria-describedby="confirmpassword" required data-msg="Please enter a valid confirm password" data-error-class="u-has-error" data-success-class="u-has-success">
                                             <div class="input-group-prepend">
                                                   <span class="input-group-text" id="signupPassword">
                                                       <span class="flaticon-password font-size-20"></span>
@@ -122,12 +123,16 @@
                                         <label class="custom-control-label" for="HaveProperty">Do you have a property to rent?</label>
                                     </div>
                                 </div>
-                                <!-- End Form Group -->                                <!-- End Form Group -->
+                                <!-- End Form Group -->
+                                <!-- End Form Group -->
+
                                 <div class="d-flex justify-content-between mb-4">
+                                    <div class="js-form-message mb-0">
                                     <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" id="customCheckboxInline2" name="customCheckboxInline2" class="custom-control-input">
+                                        <input type="checkbox" id="customCheckboxInline2" name="customCheckboxInline2" class="custom-control-input" required  data-msg="Please accept our Terms and Conditions.">
                                         <label class="custom-control-label" for="customCheckboxInline2">I have read and accept the <a href="#">Terms and Privacy Policy</a></label>
                                     </div>
+                                </div>
                                 </div>
                                 <div class="mb-3 pb-1">
                                     <button type="submit" class="btn btn-md btn-block btn-blue-1 rounded-xs font-weight-bold transition-3d-hover">Register</button>
@@ -156,6 +161,120 @@
     <span class="flaticon-arrow u-go-to-modern__inner"></span>
 </a>
 <!-- End Go to Top -->
-<%- include('_layouts/scripts') -%>
+
+<!-- JS Global Compulsory -->
+<script src="assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
+<script src="assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
+
+<!-- JS Implementing Plugins -->
+<script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+<script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="assets/vendor/flatpickr/dist/flatpickr.min.js"></script>
+<script src="assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+<script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+<script src="assets/vendor/gmaps/gmaps.min.js"></script>
+<script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+<script src="assets/vendor/appear.js"></script>
+
+
+<!-- JS MyTravel -->
+<script src="assets/js/hs.core.js"></script>
+<script src="assets/js/components/hs.header.js"></script>
+<script src="assets/js/components/hs.unfold.js"></script>
+<script src="assets/js/components/hs.validation.js"></script>
+<script src="assets/js/components/hs.show-animation.js"></script>
+<script src="assets/js/components/hs.range-datepicker.js"></script>
+<script src="assets/js/components/hs.selectpicker.js"></script>
+<script src="assets/js/components/hs.go-to.js"></script>
+<script src="assets/js/components/hs.slick-carousel.js"></script>
+<script src="assets/js/components/hs.quantity-counter.js"></script>
+<script src="assets/js/components/hs.g-map.js"></script>
+<script src="assets/js/components/hs.fancybox.js"></script>
+<script src="assets/js/components/hs.scroll-nav.js"></script>
+<script src="assets/js/components/hs.sticky-block.js"></script>
+<script src="assets/js/components/hs.focus-state.js"></script>
+
+<!-- JS Plugins Init. -->
+<script>
+    $(window).on('load', function () {
+        // initialization of HSMegaMenu component
+        $('.js-mega-menu').HSMegaMenu({
+            event: 'hover',
+            pageContainer: $('.container'),
+            breakpoint: 1199.98,
+            hideTimeOut: 0
+        });
+
+        // Page preloader
+        setTimeout(function() {
+            $('#jsPreloader').fadeOut(500)
+        }, 800);
+    });
+
+    $(document).on('ready', function () {
+        // initialization of header
+        $.HSCore.components.HSHeader.init($('#header'));
+
+        // initialization of google map
+        function initMap() {
+            $.HSCore.components.HSGMap.init('.js-g-map');
+        }
+
+        // initialization of unfold component
+        $.HSCore.components.HSUnfold.init($('[data-unfold-target]'));
+
+        // initialization of form validation
+        $.HSCore.components.HSValidation.init('.js-validate', {
+            rules: {
+                confirmPassword: {
+                    equalTo: '#signupPassword'
+                }
+            }
+        });
+
+        // initialization of show animations
+        $.HSCore.components.HSShowAnimation.init('.js-animation-link');
+
+        // initialization of forms
+        $.HSCore.components.HSFocusState.init();
+
+        // initialization of show animations
+        $.HSCore.components.HSShowAnimation.init('.js-animation-link');
+
+        // initialization of popups
+        $.HSCore.components.HSFancyBox.init('.js-fancybox');
+
+        // initialization of datepicker
+        $.HSCore.components.HSRangeDatepicker.init('.js-range-datepicker');
+
+        // initialization of select
+        $.HSCore.components.HSSelectPicker.init('.js-select');
+
+        // initialization of sticky blocks
+        $.HSCore.components.HSStickyBlock.init('.js-sticky-block');
+
+        // initialization of quantity counter
+        $.HSCore.components.HSQantityCounter.init('.js-quantity');
+
+        // initialization of slick carousel
+        $.HSCore.components.HSSlickCarousel.init('.js-slick-carousel');
+
+        // initialization of form validation
+        $.HSCore.components.HSValidation.init('.js-validate');
+
+        // initialization of go to
+        $.HSCore.components.HSGoTo.init('.js-go-to');
+
+        // initialization of HSScrollNav component
+        $.HSCore.components.HSScrollNav.init($('.js-scroll-nav'), {
+            duration: 700
+        });
+    });
+</script>
+
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCuY6I4hZQvxo5RqCH7kogGKzcrjetRKQI&callback=initMap" async defer></script>
+
 </body>
 </html>
