--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <div class="row">
 
                 <div class="container max-width-810 mx-auto">
-                    <form method="POST" action="/signin">
+                    <form method="POST" action="/signin" class="js-validate">
                     <div id="login" style="opacity: 1;" data-target-group="idForm" class="animated fadeIn">
                         <!-- Header -->
                         <div class="card-header text-center">
@@ -22,9 +22,9 @@
                         <div class="card-body pt-6 pb-4">
                             <!-- Form Group -->
                             <div class="form-group pb-1">
-                                <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                     <label class="sr-only" for="signinSrEmail">Email</label>
-                                    <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
+                                    <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
                                         <input type="email" class="form-control" name="email" id="email"
                                                placeholder="Email Or Username" aria-label="Email Or Username"
                                                aria-describedby="signinEmail" required=""
@@ -41,13 +41,13 @@
                             <!-- End Form Group -->
                             <!-- Form Group -->
                             <div class="form-group pb-1">
-                                <div class="js-form-message js-focus-state border border-width-2 border-color-8 rounded-sm">
+                                <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
                                     <label class="sr-only" for="signinSrPassword">Password</label>
-                                    <div class="input-group input-group-tranparent input-group-borderless input-group-radiusless">
+                                    <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
                                         <input type="password" class="form-control" name="password" id="password"
                                                placeholder="Password" aria-label="Password"
                                                aria-describedby="signinPassword" required=""
-                                               data-msg="Your password is invalid. Please try again."
+                                               data-msg="Please enter a valid password."
                                                data-error-class="u-has-error" data-success-class="u-has-success">
                                         <div class="input-group-prepend">
                                                                     <span class="input-group-text" id="signinPassword">
@@ -107,6 +107,118 @@
     <span class="flaticon-arrow u-go-to-modern__inner"></span>
 </a>
 <!-- End Go to Top -->
-<%- include('_layouts/scripts') -%>
+<!-- JS Global Compulsory -->
+<script src="assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
+<script src="assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
+
+<!-- JS Implementing Plugins -->
+<script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+<script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="assets/vendor/flatpickr/dist/flatpickr.min.js"></script>
+<script src="assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+<script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+<script src="assets/vendor/gmaps/gmaps.min.js"></script>
+<script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+<script src="assets/vendor/appear.js"></script>
+
+
+<!-- JS MyTravel -->
+<script src="assets/js/hs.core.js"></script>
+<script src="assets/js/components/hs.header.js"></script>
+<script src="assets/js/components/hs.unfold.js"></script>
+<script src="assets/js/components/hs.validation.js"></script>
+<script src="assets/js/components/hs.show-animation.js"></script>
+<script src="assets/js/components/hs.range-datepicker.js"></script>
+<script src="assets/js/components/hs.selectpicker.js"></script>
+<script src="assets/js/components/hs.go-to.js"></script>
+<script src="assets/js/components/hs.slick-carousel.js"></script>
+<script src="assets/js/components/hs.quantity-counter.js"></script>
+<script src="assets/js/components/hs.g-map.js"></script>
+<script src="assets/js/components/hs.fancybox.js"></script>
+<script src="assets/js/components/hs.scroll-nav.js"></script>
+<script src="assets/js/components/hs.sticky-block.js"></script>
+<script src="assets/js/components/hs.focus-state.js"></script>
+
+<!-- JS Plugins Init. -->
+<script>
+    $(window).on('load', function () {
+        // initialization of HSMegaMenu component
+        $('.js-mega-menu').HSMegaMenu({
+            event: 'hover',
+            pageContainer: $('.container'),
+            breakpoint: 1199.98,
+            hideTimeOut: 0
+        });
+
+        // Page preloader
+        setTimeout(function() {
+            $('#jsPreloader').fadeOut(500)
+        }, 800);
+    });
+
+    $(document).on('ready', function () {
+        // initialization of header
+        $.HSCore.components.HSHeader.init($('#header'));
+
+        // initialization of google map
+        function initMap() {
+            $.HSCore.components.HSGMap.init('.js-g-map');
+        }
+
+        // initialization of unfold component
+        $.HSCore.components.HSUnfold.init($('[data-unfold-target]'));
+
+        // initialization of form validation
+        $.HSCore.components.HSValidation.init('.js-validate', {
+            rules: {
+                confirmPassword: {
+                    equalTo: '#signupPassword'
+                }
+            }
+        });
+
+        // initialization of show animations
+        $.HSCore.components.HSShowAnimation.init('.js-animation-link');
+
+        // initialization of forms
+        $.HSCore.components.HSFocusState.init();
+
+        // initialization of show animations
+        $.HSCore.components.HSShowAnimation.init('.js-animation-link');
+
+        // initialization of popups
+        $.HSCore.components.HSFancyBox.init('.js-fancybox');
+
+        // initialization of datepicker
+        $.HSCore.components.HSRangeDatepicker.init('.js-range-datepicker');
+
+        // initialization of select
+        $.HSCore.components.HSSelectPicker.init('.js-select');
+
+        // initialization of sticky blocks
+        $.HSCore.components.HSStickyBlock.init('.js-sticky-block');
+
+        // initialization of quantity counter
+        $.HSCore.components.HSQantityCounter.init('.js-quantity');
+
+        // initialization of slick carousel
+        $.HSCore.components.HSSlickCarousel.init('.js-slick-carousel');
+
+        // initialization of form validation
+        $.HSCore.components.HSValidation.init('.js-validate');
+
+        // initialization of go to
+        $.HSCore.components.HSGoTo.init('.js-go-to');
+
+        // initialization of HSScrollNav component
+        $.HSCore.components.HSScrollNav.init($('.js-scroll-nav'), {
+            duration: 700
+        });
+    });
+</script>
+
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCuY6I4hZQvxo5RqCH7kogGKzcrjetRKQI&callback=initMap" async defer></script>
 </body>
 </html>
