removed unnecessary code
removed unnecessary code

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -651,29 +651,7 @@
 
                                         <div class="w-100"></div>
 
-                                        <!-- Input -->
-                                        <div class="col-sm-6 mb-10">
-                                            <div class="js-form-message">
-                                                <h5 id="scroll-description" class="font-size-21 font-weight-bold text-dark mb-2">
-                                                    Let us know
-                                                </h5>
-                                                <p class="font-size-14 gray-1">We'll let the property or host know when to expect you.</p>
-                                                <select class="form-control js-select selectpicker dropdown-select" required="" data-msg="Please select country." data-error-class="u-has-error" data-success-class="u-has-success"
-                                                    data-style="form-control font-size-16 border-width-2 border-gray font-weight-normal">
-                                                    <option value="One" selected>I don’t know</option>
-                                                    <option value="Two">I will tell later</option>
-                                                    <option value="Three">I don’t know</option>
-                                                    <option value="Four">I don’t know</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <!-- End Input -->
-
-                                        <div class="col-sm-6 align-self-end">
-                                            <div class="text-right">
-                                                <button type="submit" class="btn btn-primary btn-wide rounded-sm transition-3d-hover font-size-16 font-weight-bold py-3">NEXT PAGE</button>
-                                            </div>
-                                        </div>
+                                                <button type="submit" class="btn btn-primary w-50 rounded-sm transition-3d-hover font-size-16 font-weight-bold py-3 m-auto">Proceed to Payment</button>
                                     </div>
                                 </form>
                                 <!-- End Contacts Form -->
