--- a/views/index.ejs
+++ b/views/index.ejs
@@ -153,24 +153,8 @@
             </div>
             <!-- ========== END HERO ========== -->
 
-            <!-- Banner v6 -->
-            <div class="banner-block banner-v6">
-                <div class="dzsparallaxer auto-init height-is-based-on-content use-loading mode-scroll" data-options='{direction: "normal"}'>
-                    <!-- Apply your Parallax background image here -->
-                    <div class="divimage dzsparallaxer--target" style="height: 130%; background-image: url(assets/img/1920x500/img7.jpg);"></div>
-                    <div class="container text-center space-2 space-md-3">
-                        <div class="pb-3 mb-1 space-top-lg-1 mt-2">
-                            <h5 class="text-white font-size-40 font-weight-bold mb-1">Airbnb plus places to stay</h5>
-                            <p class="text-white font-weight-normal mb-3 mb-lg-6">A selection of places to stay verified for quality and design</p>
-                            <a class="btn btn-outline-white border-width-2 rounded-xs min-width-200 font-weight-normal transition-3d-hover" href="../blog/blog-single.html">Explore Stays</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End Banner v6 -->
-
             <!-- Testimonials v2 -->
-            <div class="testimonial-block testimonial-v2 border-bottom border-color-8">
+            <div class="testimonial-block testimonial-v2 border-bottom border-color-8 mt-8">
                 <div class="container">
                     <div class="pt-7 pb-8">
                         <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-5">
